<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_stamper</name>
  <version>0.0.3</version>
  <description>ROS2 package for converting between Twist and TwistStamped messages</description>
  <maintainer email="josh.newans@gmail.com">Josh Newans</maintainer>
  <author email="josh.newans@gmail.com">Josh Newans</author>
  <license>Apache License 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/twist_stamper</url> -->
  <url type="bugtracker">https://github.com/joshnewans/twist_stamper/issues</url>
  <url type="repository">https://github.com/joshnewans/twist_stamper</url>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
